# rootspace

./: .gitattributes  .gitignore  DESCRIPTION.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  Vagrantfile  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
engine/: components.py  config.ini  core.py  exceptions.py  loader.py  systems.py  version.py
pong/: components.py  core.py  entities.py  loader.py  systems.py
puppet/manifests/: default.pp
resources/rootspace/shaders/: floor-vertex.glsl
rootspace/: loader.py  version.py
rootspace/engine/: core.py  systems.py
rootspace/pong/: components.py  core.py  entities.py  systems.py
rootspace/pong/tests/: test_pong_core.py  test_pong_entities.py  test_pong_systems.py
src/examples/: CMakeLists.txt  glfw_example1.cpp  glfw_example1.py  glfw_example2.py
src/rootspace/: __init__.py  _index_handling.c  _index_handling.h  _math.c  _matrix.c  _matrix.h  _matrix_container.c  _matrix_container.h  _matrix_iterator.c  _matrix_iterator.h  _physics.c  _physics.h  _quaternion.c  _quaternion.h  _utilities.c  _version.py  abstract.py  commands.py  components.py  config.ini  config.py  contexts.py  core.py  data_abstractions.py  ebs.py  ecs.py  entities.py  events.py  exceptions.py  executables.py  filesystem.py  key_map.py  keymap.ini  legacy_entities.py  legacy_systems.py  loader.py  main.py  math.py  model_parser.py  opengl_math.py  (+11 more)
src/rootspace/_math/: index_handling.c  matrix.c  matrix.h  matrix_container.c  matrix_iterator.c  matrix_iterator.h  mod.c  quaternion.c  quaternion.h
src/rootspace/ecs/: core.py  scene.py  serialization.py
src/rootspace/game/: assembly.py  components.py  systems.py  view.py
src/rootspace/legacy/: core.py  data_abstractions.py  entities.py  events.py  exceptions.py  math.py  utilities.py
src/rootspace/pong/: components.py  core.py  entities.py  project.py  systems.py
src/rootspace/tests/: conftest.py  test_components.py  test_contexts.py  test_core.py  test_data_abstractions.py  test_ecs.py  test_engine_core.py  test_math.py  (+10 more)
tests/: test_engine_config.py  test_engine_core.py  test_pong_components.py  test_pong_core.py  test_pong_entities.py  test_pong_systems.py
(+23 files in other folders)
