[metadata]
setup-requires = pytest-runner

[versioneer]
VCS = git
style = pep440
versionfile_source = src/rootspace/_version.py
versionfile_build = rootspace/_version.py
tag_prefix =
parentdir_prefix = rootspace-

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* contrib puppet *.egg CVS _darcs {arch}
addopts = --cov=rootspace

[aliases]
test=pytest
